--- a/src/Components/GuestDetails/GuestDetails.css
+++ b/src/Components/GuestDetails/GuestDetails.css
@@ -13,6 +13,13 @@
     border-radius: 0.7rem;
 }
 
+.doc-pic {
+    background-color: #464646;
+    width: 388px;
+    height: 190px;
+    border-radius: 1rem;
+}
+
 .guest-form input {
     border-radius: 0.5rem;
     border: 1px solid #EBEDEF;
@@ -33,7 +40,7 @@
     border: 1px solid #EBEDEF;
 }
 
-.guest-form>div {
+.guest-form > div {
     flex: 1 1 45%;
     margin: 0.5rem;
 }
@@ -42,19 +49,27 @@
     display: block;
     margin-bottom: 0.5rem;
 }
-.scanned-document-img{
+
+.scanned-document-img {
     height: 250px;
 }
+
 .guest-form input,
 .guest-form select {
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
 }
+.face-img{
+    height: 10rem;
+    margin-top: 1px;
+
+}
 
 .guest-images {
     display: flex;
-    gap: 1.3rem;
+    gap: 1rem;
+    justify-content: center;
 }
 
 .scanned-document-img {
@@ -62,21 +77,83 @@
     width: 388px;
     height: 190px;
     border-radius: 1rem;
-
 }
-.user-pic{
+.profile-pic{
+    padding: 0 4rem;
+    background: grey;
+    border-radius: 1rem;
+}
+
+.scan-profile-button {
+    padding: 0.5rem 1rem;
+    border: none;
+    background-color: #2F7EC2;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    margin: 4rem 0rem;
+}
+
+.scan-profile-button i {
+    margin-right: 0.7rem;
+}
+
+.scan-button {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0.5rem 1rem;
+    border: none;
+    background-color: #2F7EC2;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.scan-button i {
+    margin-right: 0.5rem;
+    border-radius: 1rem;
+}
+
+.error {
+    color: red;
+}
+
+.user-pic {
     background-color: #464646;
-    width: 388px;
+    width: 350px;
     height: 190px;
     border-radius: 1rem;
-    padding: 1rem 8rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
-.face-img{
-    width: 8rem;
+
+.full-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+
+.empty-placeholder {
+    height: 100%;
+    width: 100%;
+    background-color: #464646;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .passport-pic {
-
     width: 388px;
     height: 190px;
     border-radius: 1rem;
@@ -84,10 +161,11 @@
 
 .form-buttons {
     display: flex;
-    padding: 0.5rem 24rem;
+    justify-content: center;
+    padding-bottom: 4rem;
     gap: 0.5rem;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .form-buttons i {
@@ -108,3 +186,6 @@
 .form-buttons button:hover {
     background-color: #1c609c;
 }
+
+/* Style for Add Guest button to match Scan button */
+
