--- a/src/Components/GuestDetails/GuestDetails.css
+++ b/src/Components/GuestDetails/GuestDetails.css
@@ -4,6 +4,15 @@
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+.btn-outline-primary {
+    font-size: 0.9rem;
+    float: right;
+    margin: 0 !important;
+    border: 1px solid #5796CA;
+    border-radius: 0.8rem;
+    color: #5796CA;
+    font-weight: 500;
+}
 
 .guest-form {
     margin-top: 1rem;
@@ -20,24 +29,13 @@
     border-radius: 1rem;
 }
 
-.guest-form input {
-    border-radius: 0.5rem;
-    border: 1px solid #EBEDEF;
-}
-
+.guest-form input,
 .guest-form select {
     border-radius: 0.5rem;
     border: 1px solid #EBEDEF;
-}
-
-.guest-form input:hover {
-    border-radius: 0.5rem;
-    border: 1px solid #EBEDEF;
-}
-
-.guest-form select:hover {
-    border-radius: 0.5rem;
-    border: 1px solid #EBEDEF;
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .guest-form > div {
@@ -54,21 +52,14 @@
     height: 250px;
 }
 
-.guest-form input,
-.guest-form select {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-.face-img{
+.face-img {
     height: 10rem;
     margin-top: 1px;
-
 }
 
 .guest-images {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     justify-content: center;
 }
 
@@ -78,7 +69,8 @@
     height: 190px;
     border-radius: 1rem;
 }
-.profile-pic{
+
+.profile-pic {
     padding: 0 4rem;
     background: grey;
     border-radius: 1rem;
@@ -100,10 +92,11 @@
 }
 
 .scan-button {
+    display: none;
     position: absolute;
-    bottom: 10px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     padding: 0.5rem 1rem;
     border: none;
     background-color: #2F7EC2;
@@ -116,6 +109,10 @@
 .scan-button i {
     margin-right: 0.5rem;
     border-radius: 1rem;
+}
+
+.user-pic:hover .scan-button {
+    display: block;
 }
 
 .error {
@@ -186,6 +183,3 @@
 .form-buttons button:hover {
     background-color: #1c609c;
 }
-
-/* Style for Add Guest button to match Scan button */
-
