--- a/src/Components/GuestDetails/GuestDetails.css
+++ b/src/Components/GuestDetails/GuestDetails.css
@@ -183,3 +183,27 @@
 .form-buttons button:hover {
     background-color: #1c609c;
 }
+
+.add-guest-button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    gap: 10px; 
+}
+
+.add-guest-button-container .btn,
+.check-in-out-container .btn {
+    width: 200px; 
+    height: 50px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.out-btn{
+    display: flex;
+    gap: 0.4rem;
+}
+.out-btn{
+    display: flex;
+    gap: 0.5rem
+}
